add spreadsheet link

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,3 +53,7 @@ body {
 .link:hover {
   cursor: pointer;
   text-decoration: underline; }
+
+.spreadsheet-link {
+  text-align: center;
+  margin-top: 5rem; }
