--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,3 +57,9 @@ body {
 .spreadsheet-link {
   text-align: center;
   margin-top: 5rem; }
+
+.form-select {
+  background-color: rgba(0, 0, 0, 0.25);
+  color: white;
+  border: solid 1px black;
+  outline: none; }
