--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -75,3 +75,10 @@ body {
     text-align: center;
     margin-top: 5rem;
 }
+
+.form-select {
+    background-color: rgba(0, 0, 0, 0.25);
+    color: white;
+    border: solid 1px black;
+    outline: none;
+}
